# JARVIS

./: .gitignore  AGENTS.md  GEMINI.md  LICENSE  README.md  package-lock.json  package.json  postcss.config.js  tsconfig.json  vite.config.ts
src/: App.tsx  Dashboard Requirements.md  JARVIS.md  README.md  main.tsx  styles.css
src-tauri/: .gitignore  Cargo.toml  diesel.toml  pyproject.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: agent.rs  chat.rs  config.rs  documents.rs  hardware.rs  mod.rs  system.rs  voice.rs
src-tauri/src/domain/: chat.rs  config.rs  errors.rs  hardware.rs  mod.rs  system.rs  voice.rs
src-tauri/src/domain/defaults/: system_prompt.md
src-tauri/src/handlers/: chat.rs  documents.rs  mod.rs  skills.rs  voice.rs
src-tauri/src/infrastructure/: agent.rs  db.rs  hardware.rs  mod.rs  repository.rs  system.rs
src-tauri/src/infrastructure/database/: mod.rs  pool.rs  repository.rs
src-tauri/src/infrastructure/database/migrations/0001_initial_schema/: down.sql  up.sql
src-tauri/src/infrastructure/database/models/: mod.rs  schema.rs  session.rs  session_history.rs
src-tauri/tests/: domain_tests.rs  hardware_tests.rs  mod.rs  regression_old_db_migration.rs
src-tauri/tests/db/: create.rs  delete.rs  edge_cases.rs  mod.rs  read.rs  relations.rs  schema.rs  update.rs
src/assets/: README.md  frontend_integration_guide_file_attachments.md  implementation_plan.md  ui_config_guide.md
src/components/: HardwareToggle.tsx  OfflineSidebar.tsx  README.md  Sidebar.tsx  (+1 more)
(+123 files in other folders)
