[package]
name = "jarvis"
version = "0.1.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "jarvis_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.release]
opt-level = 3
strip = true
codegen-units = 1
lto = true
panic = 'unwind'

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.51.0", features = ["full"] }
anyhow = "1.0.102"
crossbeam-channel = "0.5"
jarvis-transcriber = { git = "https://github.com/PROJECT-JARV1S/jarvis-voice.git", version = "0.2.0" }
thiserror = "2.0.18"
agent_rs = { git = "https://github.com/skaarfundgandr/agent_rs.git", version = "0.2.0" }
rusqlite = { version = "0.39.0", features = ["bundled"] }
toml = "1.1.2"
uuid = { version = "1.23.1", features = ["v4"] }
chrono = "0.4.44"
rig-core = "0.36.0"
sysinfo = "0.39.2"
tauri-plugin-media = { git = "https://github.com/skaarfundgandr/tauri-plugin-media.git", version = "0.1.1" }
tauri-plugin-dialog = "2"
